fixed arrow vertical alignment

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -238,7 +238,6 @@ i {
         width: 12px;
         height: 12px;
         position: relative;
-        top: 0.1em;
     }
     &.up {
         border-width: 3px 0 0 3px;
